--- a/.github/workflows/sb.yml
+++ b/.github/workflows/sb.yml
@@ -8,6 +8,11 @@ on:
   pull_request:
     branches:
       - master
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   workflow_dispatch:
 
 # Allow one concurrent deployment
