:wrench: Ignore coverage on RuntimeError
These are usually situations that should not happen and are outside of
our control.

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,5 +59,6 @@ exclude_also =
     class .*\(.*Protocol.*\):
     @(abc\.)?abstractmethod
     raise NotImplementedError
+    raise RuntimeError
     \.\.\.
     pass
