--- a/src/openforms/registrations/contrib/objects_api/tests/files/vcr_cassettes/ObjectsAPIPaymentStatusUpdateV2Tests/ObjectsAPIPaymentStatusUpdateV2Tests.test_update_payment_status.yaml
+++ b/src/openforms/registrations/contrib/objects_api/tests/files/vcr_cassettes/ObjectsAPIPaymentStatusUpdateV2Tests/ObjectsAPIPaymentStatusUpdateV2Tests.test_update_payment_status.yaml
@@ -27,8 +27,8 @@ interactions:
     uri: http://localhost:8002/api/v2/objects
   response:
     body:
-      string: '{"url":"http://objects-web:8000/api/v2/objects/6825c0a9-35a3-4708-b628-2b9e9ad86a28","uuid":"6825c0a9-35a3-4708-b628-2b9e9ad86a28","type":"http://objecttypes-web:8000/api/v2/objecttypes/8e46e0a5-b1b4-449b-b9e9-fa3cea655f48","record":{"index":1,"typeVersion":3,"data":{"age":20,"name":{"last.name":"My
-        last name"},"submission_pdf_url":"http://example.com","submission_csv_url":"http://example.com","submission_payment_completed":false,"nested":{"unrelated":"some_value","submission_payment_amount":0},"submission_payment_public_ids":[],"submission_date":"2020-02-02T00:00:00+00:00"},"geometry":null,"startAt":"2020-02-02","endAt":null,"registrationAt":"2024-07-05","correctionFor":null,"correctedBy":null}}'
+      string: '{"url":"http://objects-web:8000/api/v2/objects/1aa7576c-cb4e-44af-a869-26e2868c0616","uuid":"1aa7576c-cb4e-44af-a869-26e2868c0616","type":"http://objecttypes-web:8000/api/v2/objecttypes/8e46e0a5-b1b4-449b-b9e9-fa3cea655f48","record":{"index":1,"typeVersion":3,"data":{"age":20,"name":{"last.name":"My
+        last name"},"submission_pdf_url":"http://example.com","submission_csv_url":"http://example.com","submission_payment_completed":false,"nested":{"unrelated":"some_value","submission_payment_amount":0},"submission_payment_public_ids":[],"submission_date":"2020-02-02T00:00:00+00:00"},"geometry":null,"startAt":"2020-02-02","endAt":null,"registrationAt":"2024-08-06","correctionFor":null,"correctedBy":null}}'
     headers:
       Allow:
       - GET, POST, HEAD, OPTIONS
@@ -43,13 +43,15 @@ interactions:
       Cross-Origin-Opener-Policy:
       - same-origin
       Date:
-      - Fri, 05 Jul 2024 06:35:20 GMT
+      - Tue, 06 Aug 2024 08:33:39 GMT
       Location:
-      - http://localhost:8002/api/v2/objects/6825c0a9-35a3-4708-b628-2b9e9ad86a28
+      - http://localhost:8002/api/v2/objects/1aa7576c-cb4e-44af-a869-26e2868c0616
       Referrer-Policy:
       - same-origin
       Server:
       - nginx/1.27.0
+      Vary:
+      - origin
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -87,7 +89,7 @@ interactions:
       Cross-Origin-Opener-Policy:
       - same-origin
       Date:
-      - Fri, 05 Jul 2024 06:35:20 GMT
+      - Tue, 06 Aug 2024 08:33:39 GMT
       Referrer-Policy:
       - same-origin
       Server:
@@ -105,7 +107,7 @@ interactions:
     body: '{"type": "http://objecttypes-web:8000/api/v2/objecttypes/8e46e0a5-b1b4-449b-b9e9-fa3cea655f48",
       "record": {"typeVersion": 3, "data": {"submission_payment_completed": true,
       "nested": {"submission_payment_amount": 10.01}, "submission_payment_public_ids":
-      ["TEST-123"]}, "startAt": "2020-02-02"}}'
+      ["TEST-123"], "submission_provider_payment_ids": ["12345"]}, "startAt": "2020-02-02"}}'
     headers:
       Accept:
       - '*/*'
@@ -118,17 +120,17 @@ interactions:
       Content-Crs:
       - EPSG:4326
       Content-Length:
-      - '293'
+      - '339'
       Content-Type:
       - application/json
       User-Agent:
       - python-requests/2.32.2
     method: PATCH
-    uri: http://localhost:8002/api/v2/objects/6825c0a9-35a3-4708-b628-2b9e9ad86a28
+    uri: http://localhost:8002/api/v2/objects/1aa7576c-cb4e-44af-a869-26e2868c0616
   response:
     body:
-      string: '{"url":"http://objects-web:8000/api/v2/objects/6825c0a9-35a3-4708-b628-2b9e9ad86a28","uuid":"6825c0a9-35a3-4708-b628-2b9e9ad86a28","type":"http://objecttypes-web:8000/api/v2/objecttypes/8e46e0a5-b1b4-449b-b9e9-fa3cea655f48","record":{"index":2,"typeVersion":3,"data":{"age":20,"name":{"last.name":"My
-        last name"},"nested":{"unrelated":"some_value","submission_payment_amount":10.01},"submission_date":"2020-02-02T00:00:00+00:00","submission_csv_url":"http://example.com","submission_pdf_url":"http://example.com","submission_payment_completed":true,"submission_payment_public_ids":["TEST-123"]},"geometry":null,"startAt":"2020-02-02","endAt":null,"registrationAt":"2024-07-05","correctionFor":null,"correctedBy":null}}'
+      string: '{"url":"http://objects-web:8000/api/v2/objects/1aa7576c-cb4e-44af-a869-26e2868c0616","uuid":"1aa7576c-cb4e-44af-a869-26e2868c0616","type":"http://objecttypes-web:8000/api/v2/objecttypes/8e46e0a5-b1b4-449b-b9e9-fa3cea655f48","record":{"index":2,"typeVersion":3,"data":{"age":20,"name":{"last.name":"My
+        last name"},"nested":{"unrelated":"some_value","submission_payment_amount":10.01},"submission_date":"2020-02-02T00:00:00+00:00","submission_csv_url":"http://example.com","submission_pdf_url":"http://example.com","submission_payment_completed":true,"submission_payment_public_ids":["TEST-123"],"submission_provider_payment_ids":["12345"]},"geometry":null,"startAt":"2020-02-02","endAt":null,"registrationAt":"2024-08-06","correctionFor":null,"correctedBy":null}}'
     headers:
       Allow:
       - GET, PUT, PATCH, DELETE, HEAD, OPTIONS
@@ -137,17 +139,19 @@ interactions:
       Content-Crs:
       - EPSG:4326
       Content-Length:
-      - '718'
+      - '762'
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
       - same-origin
       Date:
-      - Fri, 05 Jul 2024 06:35:21 GMT
+      - Tue, 06 Aug 2024 08:33:39 GMT
       Referrer-Policy:
       - same-origin
       Server:
       - nginx/1.27.0
+      Vary:
+      - origin
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
