Fix broken test isolation because of celery tasks being triggered in CI
PR #4596

* :alembic: See if we have live celery communications

* :fire: Delete snake_case detection

The save hook would fire a celery task on every save
of a form definition instance - including during test runs (in CI).
This creates a lot of tasks in CI to run by the celery worker, which
we also spin up in different tests to check the health check. It is
revealed in the previous commit that real celery events are being
put in the task queue, which is *not* what you want to be happening
in a test suite, as test isolation is required for reproducible
results/outcomes.

The value of this check had also become very low - we structurally
exclude the 'configuration' key from snake/camel case conversion in
the parser/renderer configuration, and formio itself is also not
consistent with snake case and camel case in its own definitions.

It's also only being emitted to Sentry, and probably nobody is actually
looking into these problems - no bug reports have reached us about it
anyway.

* :thread: Remove unnecessary captureOnCommitCallbacks calls

These calls result in celery tasks being scheduled, which hangs when
the broker is (deliberately) not available. The tests pass without this
behaviour.

* :wrench: Update CI settings to prevent infinitely hanging tests

If a test would accidentally rely on a celery task being scheduled, this
will not be clear and instead the test suite itself will just hang,
making this problem hard to debug.

Explicitly blocking these robustness features should increase test
explicitness and report the problems, while not consuming CI resources
indefinitely.

* :thread: Only schedule post-processing after transaction is committed to the DB

Discovered by using a deliberately broken Celery setup - the celery
task to process variable relations after the variables have been
updated was being fired before the database transaction comp

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,11 @@ jobs:
           DB_USER: postgres
           DB_PASSWORD: ''
           DEBUG: 'true'
+          # deliberatey broken
+          CELERY_BROKER_URL: 'redis://bad-host:6379/0'
+          # specified explicitly, since the broker URL is broken, but the once backend
+          # needs to be available even with CELERY_TASK_ALWAYS_EAGER
+          CELERY_ONCE_REDIS_URL: 'redis://localhost:6379/0'
 
       - run: npm ci
         working-directory: .github/actions/report-flaky
