--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -30,6 +30,9 @@ include = [
     "src/openforms/contrib/zgw/service.py",
     "src/openforms/registrations/contrib/email/config.py",
     "src/openforms/registrations/contrib/email/plugin.py",
+    "src/openforms/registrations/contrib/stuf_zds/options.py",
+    "src/openforms/registrations/contrib/stuf_zds/plugin.py",
+    "src/openforms/registrations/contrib/stuf_zds/typing.py",
     "src/openforms/registrations/contrib/objects_api/plugin.py",
     "src/openforms/registrations/contrib/objects_api/submission_registration.py",
     "src/openforms/registrations/contrib/objects_api/typing.py",
