--- a/src/openforms/contrib/haal_centraal/tests/files/vcr_cassettes/BRPIntegrationTest/BRPIntegrationTest.test_brp_integration_prefill.yaml
+++ b/src/openforms/contrib/haal_centraal/tests/files/vcr_cassettes/BRPIntegrationTest/BRPIntegrationTest.test_brp_integration_prefill.yaml
@@ -27,12 +27,14 @@ interactions:
     uri: https://lab.api.mijniconnect.nl/iconnect/apihcbrp/actueel/v2/personen
   response:
     body:
-      string: '{"type":"RaadpleegMetBurgerservicenummer","personen":[{"aNummer":"6374749384","burgerservicenummer":"999990421","geslacht":{"code":"M","omschrijving":"man"},"leeftijd":120,"naam":{"aanduidingNaamgebruik":{"code":"E","omschrijving":"eigen
+      string: '{"type":"RaadpleegMetBurgerservicenummer","personen":[{"aNummer":"6374749384","burgerservicenummer":"999990421","geslacht":{"code":"M","omschrijving":"man"},"naam":{"aanduidingNaamgebruik":{"code":"E","omschrijving":"eigen
         geslachtsnaam"},"voornamen":"Adrianus Hendrikus","geslachtsnaam":"Holthuizen","voorletters":"A.H.","volledigeNaam":"Adrianus
         Hendrikus Holthuizen"},"geboorte":{"datum":{"type":"Datum","datum":"1904-02-15","langFormaat":"15
-        februari 1904"}},"verblijfplaats":{"type":"Adres","verblijfadres":{"officieleStraatnaam":"Nieuwe
-        Parklaan","korteStraatnaam":"Nieuwe Parklaan","huisnummer":58,"postcode":"2597LD","woonplaats":"''s-Gravenhage"},"functieAdres":{"code":"W","omschrijving":"woonadres"},"adresseerbaarObjectIdentificatie":"0518010000436226","nummeraanduidingIdentificatie":"0518200000436225","datumVan":{"type":"Datum","datum":"2001-07-28","langFormaat":"28
-        juli 2001"}},"gemeenteVanInschrijving":{"code":"0518","omschrijving":"''s-Gravenhage"},"adressering":{"aanhef":"Geachte
+        februari 1904"}},"opschortingBijhouding":{"datum":{"type":"Datum","datum":"1998-08-15","langFormaat":"15
+        augustus 1998"},"reden":{"code":"O","omschrijving":"overlijden"}},"overlijden":{"datum":{"type":"Datum","datum":"1998-08-15","langFormaat":"15
+        augustus 1998"}},"verblijfplaats":{"type":"Adres","verblijfadres":{"korteStraatnaam":"Nieuwe
+        Parklaan","huisnummer":58,"postcode":"2597LD"},"functieAdres":{"code":"W","omschrijving":"woonadres"},"datumVan":{"type":"Datum","datum":"1997-07-28","langFormaat":"28
+        juli 1997"}},"gemeenteVanInschrijving":{"code":"0518","omschrijving":"''s-Gravenhage"},"adressering":{"aanhef":"Geachte
         heer Holthuizen","aanschrijfwijze":{"naam":"A.H. Holthuizen"},"gebruikInLopendeTekst":"de
         heer Holthuizen","adresregel1":"Nieuwe Parklaan 58","adresregel2":"2597 LD  ''S-GRAVENHAGE"},"partners":[{"naam":{"geslachtsnaam":"Wiegman"},"aangaanHuwelijkPartnerschap":{"datum":{"type":"Datum","datum":"1926-07-15","langFormaat":"15
         juli 1926"}}}]}]}'
@@ -42,9 +44,9 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 05 Jul 2024 12:15:49 GMT
+      - Mon, 16 Sep 2024 13:33:24 GMT
       Strict-Transport-Security:
-      - max-age=15724800; includeSubDomains
+      - max-age=31536000; includeSubDomains
       Transfer-Encoding:
       - chunked
     status:
