--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -435,7 +435,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        start: ['2.7.0', '2.7.4']
+        start: ['2.7.4', '2.7.6']
 
     steps:
       - uses: actions/checkout@v4
@@ -459,7 +459,7 @@ jobs:
           docker compose run -e RELEASE=${RELEASE} web \
             python src/manage.py migrate
         env:
-          RELEASE: '2.8.0'
+          RELEASE: '2.8.0-beta.0'
           # ensure local image gets used
           TAG: ${{ needs.docker_build_setup.outputs.version }}
 
