--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -427,6 +427,9 @@ jobs:
           format: 'sarif'
           output: 'trivy-results-docker.sarif'
           ignore-unfixed: true
+        env:
+          # See https://github.com/aquasecurity/trivy-action/issues/389#issuecomment-2368662097
+          ACTIONS_RUNTIME_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload results to GH Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
