:alien: Temporarily disable oas-generate-sdk job requirement
search.maven.org is down, which affects the job to generate the SDKs,
which blocks CI being able to push the patched Docker image for 2.7.8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -569,7 +569,7 @@ jobs:
       - docker_build
       - oas-lint
       - oas-postman
-      - oas-generate-sdks
+      # - oas-generate-sdks
 
     name: Push Docker image
     runs-on: ubuntu-latest
