:wrench: Add 2.8.x to Docker Hub description

--- a/docker/ci/config.json
+++ b/docker/ci/config.json
@@ -6,6 +6,11 @@
       "hasExtensionsVariant": true
     },
     {
+      "gitRef": "stable/2.8.x",
+      "tag": null,
+      "hasExtensionsVariant": true
+    },
+    {
       "gitRef": "stable/2.7.x",
       "tag": null,
       "hasExtensionsVariant": true
