:construction_worker: Clean up CI workflow
Removed debug output from image scan job and uses latest action
again, after confirming the paths fix in another project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -421,12 +421,8 @@ jobs:
         with:
           name: docker-image-all-extensions-${{ needs.docker_build_setup.outputs.version }}
 
-      - run: |
-          pwd
-          ls
-
       - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@0.27.0
+        uses: aquasecurity/trivy-action@master
         with:
           input: ${{ github.workspace }}/image.tar  # from download-artifact
           format: 'sarif'
